# Sphinx_madoc

./: .gitignore  pyproject.toml
source/_static/ressources/: competences_analytiques.docx
source/data/compétences_analytiques/: index.rst
source/data/nouvelles_perspectives/: analyser.rst  partager.rst  traiter.rst
source/django/: index.rst
source/django/drf/: index.rst
source/django/uv/: document_technique.rst  index.rst  utilisation.rst
