[project]
name = "madoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blurb>=2.0.0",
    "furo>=2025.12.19",
    "imagesize>=2.0.0",
    "markupsafe>=3.0.3",
    "matplotlib>=3.10.8",
    "nox>=2026.4.10",
    "pygments>=2.20.0",
    "python-docs-theme>=2026.3",
    "requests>=2.33.1",
    "snowballstemmer>=3.0.1",
    "sphinx>=9.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-inline-tabs>=2025.12.21.14",
    "sphinx-lint>=1.0.2",
    "sphinx-notfound-page>=1.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxext-opengraph>=0.13.0",
    "sphinxext-rediraffe>=0.3.0",
]
